[package]
name = "acu"
version = "0.2.2"
edition = "2021"
authors = ["Grzegorz Barański <me@gbaranski.com>"]
description = "Utilities for building asynchronous actors"
readme = "README.md"
repository = "https://github.com/gbaranski/acu"
license = "MIT"
keywords = ["actor", "async"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
log = { version = "0.4.14", optional = true }
tokio = { version = "1.16.1", features = ["sync"] }

[features]
default = ["log"]

[dev-dependencies]
log = { version = "0.4.14" }
simple-log = "1.4.0"
tokio = { version = "1.16.1", features = ["full"] }

[[example]]
name = "logging"
required-features = ["log"]
