[package]
name = "acu"
version = "0.4.0"
edition = "2021"
authors = ["Grzegorz Barański <me@gbaranski.com>"]
description = "Utilities for building asynchronous actors"
readme = "README.md"
repository = "https://github.com/gbaranski/acu"
license = "MIT"
keywords = ["actor", "async"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
cfg-if = "1.0.0"
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["sync", "rt", "macros"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }

log = { version = "0.4.14", optional = true }
uuid = { version = "0.8.2", optional = true }

[features]
default = ["log", "master-slave"]
master-slave = []

[dev-dependencies]
log = { version = "0.4.14" }
simple-log = "1.4.0"
tokio = { version = "1.16.1", features = ["full"] }

[[example]]
name = "logging"
required-features = ["log"]

[[example]]
name = "master-slave-broadcast"
required-features = ["master-slave"]

[[example]]
name = "master-slave"
required-features = ["master-slave"]
